Fixed arrow positioning on iOS devices

--- a/mobile/css/style.css
+++ b/mobile/css/style.css
@@ -71,6 +71,7 @@ p{
 	position: absolute;
 	top: 50%;
 	transform: translateY(-50%);
+	-webkit-transform: translateY(-50%);
 }
 .landing-stories-wrap .sg-prev{
 	left: 11px;
@@ -304,6 +305,10 @@ sup{
 	position: relative;
 	overflow: hidden;
 	transition: width .3s ease;
+	-webkit-transition: height .3s ease;
+	-moz-transition: height .3s ease;
+	-o-transition: height .3s ease;
+	transition: height .3s ease;
 }
 .media-section.expanded{
 	width: 100%;
@@ -631,6 +636,7 @@ footer a + a{
 	position: absolute;
 	top: 50%;
 	transform: translateY(-50%);
+	-webkit-transform:translateY(-50%);
 }
 .video-performances-wrap .sg-prev{
 	left: 11px;
@@ -911,11 +917,19 @@ footer a + a{
 	width: 100%;
 	height: 430px;
 	position: relative;
+	-webkit-transition: height .3s ease;
+	-moz-transition: height .3s ease;
+	-o-transition: height .3s ease;
+	transition: height .3s ease;
 }
 .media-section--content .scroll-visible-area .scrollable{
 	width: 100%;
 	height: 430px;
 	overflow: hidden;
+	-webkit-transition: height .3s ease;
+	-moz-transition: height .3s ease;
+	-o-transition: height .3s ease;
+	transition: height .3s ease;
 }
 .overlayed-image-gallery{
 	width: 0;
